# qbjs_deserializer

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md
src/: analysis.rs  error.rs  lib.rs  qbjs.rs  read.rs  type_conversions.rs
tests/: integration_tests.rs  validation_tests.rs
tests/test_data/: 00_null_document.qbjs  01_bool_true_document.qbjs  02_bool_false_document.qbjs  03_double_document.qbjs  04_int_document.qbjs  06_null_array_document.qbjs  07_bool_array_document.qbjs  08_double_array_document.qbjs  09_int_array_document.qbjs  10_string_array_document.qbjs  11_object_document.qbjs  12_object_in_object_document.qbjs
tests/test_data/expected_json/: 000_null_object_document.json  001_bool_true_object_document.json  002_bool_false_object_document.json  003_double_object_document.json  004_double_zero_object_document.json  005_negative_double_object_document.json  006_int_object_document.json  007_int_zero_object_document.json  008_negative_int_object_document.json  009_string_object_document.json  010_strings_object_document.json  011_japanese_string_object_document.json  012_various_values_object_document.json  100_null_array_document.json  101_bool_array_document.json  102_double_array_document.json  103_int_array_document.json  104_string_array_document.json  105_various_values_array_document.json  200_object_object_document.json  201_array_object_document.json  202_tree_object_document.json  203_tree_array_document.json  204_array_in_array_document.json  205_tree_array_in_array_document.json  206_objects_in_array_document.json  (+2 more)
(+32 files in other folders)
