[package]
name = "qbjs_deserializer"
version = "0.0.3"
edition = "2021"
authors = ["Alexandre Poirot <alexandre.poirot+qbjs_deserializer@gmail.com>"]
description = "This crate attempts to deserialize files serialized in Qt5's internal binary JSON format to a serde_json value."
readme = "README.md"
homepage = "https://github.com/loreilei/qbjs_deserializer"
repository = "https://github.com/loreilei/qbjs_deserializer"
license = "MIT"
license_file = "LICENSE.txt"
keywords = ["Qt5", "binary", "json", "deserialize"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
encoding = "0.2"
